--- a/index.html
+++ b/index.html
@@ -25,24 +25,21 @@
     <div>
       <table>
         <tr>
-          <td><img src="" alt="">
-          <h1>#</h1></td>
+          <td><img src="assets/image1.jpg" alt="">
           <td>
             <h2>Premium Materials</h2>
             <p>Our trombones use the shiniest brass which is sourced locally. This will increase the longevity of your purchase.</p>
           </td>
         </tr>
         <tr>
-          <td><img src="" alt="">
-          <h1>#</h1></td>
+          <td><img src="assets/image2.jpg" alt="">
           <td>
             <h2>Fast Shipping</h2>
             <p>We make sure you recieve your trombone as soon as we have finished making it. We also provide free returns if you are not satisfied.</p>
           </td>
         </tr>
         <tr>
-          <td><img src="" alt="">
-          <h1>#</h1></td>
+          <td><img src="assets/image3.jpg" alt="">
           <td>
             <h2>Quality Assurance</h2>
             <p>For every purchase you make, we will ensure there are no damages or faults and we will check and test the pitch of your instrument.</p>
